--- a/xmodeler/examples/simple.html
+++ b/xmodeler/examples/simple.html
@@ -5,7 +5,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta charset="UTF-8">
-
+<!--[if lte IE 8]>
+<script type="text/javascript" src="../lib/ie/excanvas.js"></script>
+<script type="text/javascript" src="../lib/ie/canvas.text.js"></script>
+<script type="text/javascript" src="../lib/ie/faces/optimer-normal-normal.js"></script>
+<![endif]-->
 <!-- jQuery文件，在最前面引入 -->
 <script type="text/javascript" src="http://cdn.bootcss.com/jquery/1.8.3/jquery.min.js"></script>
 <!-- 一个小工具类 -->
@@ -25,13 +29,16 @@
 
 </head>
 <body>
+<div id="webalert">
+
+</div>
 <div  id="bpm" class="canvas" style="height:360px;"></div>
 
 <script type="text/javascript">
 //在Onload事件中加载Xmodeler
 $(function() {
   if(window.location.href.indexOf("http") != 0) {
-    alert("请在一个Web容器中运行。");
+    $('#webalert').html("请在一个web容器中运行。").css("marginBottom", '5px');
   }
 	var bpm = new ActivityEngine({ //使用Activity Bpmn实现
 		selector : '#bpm' //符合css selector规范
