完成一个表单绑定的例子

--- a/xmodeler/examples/forms/startnoneevent_form.html
+++ b/xmodeler/examples/forms/startnoneevent_form.html
@@ -25,22 +25,22 @@ input {
    <input name="id" type="hidden" value="">
    <input name="initiator" type="hidden" value="">
    <div>
-   名称：<input name="name" type="text" >
+   节点名称：<input name="name" type="text" >
    </div>
    <div>
-   表单：<input name="formkeydefinition" type="表单Key">
+   绑定表单：<input name="formkeydefinition" type="表单Key">
    </div>
 </form>
 
-<h3>表单：</h3>
+<h3>表单字段：</h3>
 <form class="form-start-event-formproperties">
    <div>
-   表单ID：<input name="formproperty_id" type="text" >表单名称：<input name="formproperty_name" type="text">
+   字段ID：<input name="formproperty_id" type="text" >字段名称：<input name="formproperty_name" type="text">
    </div>
  </form>
 <form class="form-start-event-formproperties">
    <div>
-   表单ID：<input name="formproperty_id" type="text" >表单名称：<input name="formproperty_name" type="text" >
+   字段ID：<input name="formproperty_id" type="text" >字段名称：<input name="formproperty_name" type="text" >
    </div>
 </form>
 <script type="text/javascript">
