--- a/xmodeler/examples/forms/exclusivegateway_form.html
+++ b/xmodeler/examples/forms/exclusivegateway_form.html
@@ -20,34 +20,19 @@ input {
 </style>
 </head>
 <body style="background-color: #eee;">
-<form id="form-timerevent">
+<form id="form-parallelgateway">
    <input name="id" type="hidden">
    <table style="width:100%">
        <tr>
-           <td style="width:50%;">
+           <td >
            名　　称：<input name="name" type="text" >
            </td>
-           <td  style="width:50%;">
-           文　　档：<input name="documentation" type="text" >
-           </td>
        </tr>
        <tr>
-           <td  style="width:50%;">
-           取消动作：<select name="cancelactivity" style="width:200px;"><option value="true">是</option><option value="false">否</option></select>
-           </td>
-           <td  style="width:50%;">
-           等待时间：<input name="timerdurationdefinition" type="text" >
+           <td >
+           缺省流向：<select name="defaultFlow" ></select>
            </td>
        </tr>
-       <tr>
-           <td  style="width:50%;">
-           触发时间：<input name="timerdatedefinition" type="text" >
-           </td>
-           <td  style="width:50%;">
-           循环间隔：<input name="timercycledefinition" type="text" >
-           </td>
-       </tr>
-       
    </table>
 
 </form>
@@ -56,7 +41,7 @@ input {
 function toActivity() {
   var obj = {};
   //将Form组成一个Object
-  $('#form-timerevent input,select').each(function() {
+  $('#form-parallelgateway input,select').each(function() {
     var _this = $(this);
     obj[_this.attr('name')] = _this.val();
   });
@@ -64,12 +49,33 @@ function toActivity() {
   return obj;
 }
 
-function fromActivity(node) {console.log(node)
+function fromActivity(node) {
   for(var prop in node.raw) {
-    $('#form-timerevent *[name=' + prop + ']').val(node.raw[prop]);
+    $('#form-parallelgateway input[name=' + prop + ']').val(node.raw[prop]);
   }
+  //根据ExclusiveGateway的出口，构造缺省流向的选择框
+  var outs = node.getOutgoing();
+  var select = $('select');
+  var options = [];
+  if(outs) {
+    for(var i = 0; i < outs.length; i++) {
+      //node.parent.context.cavas.engine是XModeler根对象，有很多有用的方法
+      var out = node.parent.context.canvas.engine.byId(outs[i].id);
+      if(out) {
+        console.log(out)
+        var name = out.name ? out.name : out.id; //如果SequenceFlow有name，则使用name，否则只好使用ID
+        options.push('<option value="' + out.id + '">' + name + '</option>');
+      }
+    }
+  }
+  select.html(options.join(''));
+  //将节点中的数据恢复到表单中
+  select.val(node.raw.defaultFlow);
 }
 
+$(function() {
+  toActivity();
+});
 </script>
 </body>
 </html>
