--- a/xmodeler/examples/index.html
+++ b/xmodeler/examples/index.html
@@ -15,8 +15,35 @@
 <script type="text/javascript" src="../src/base/Utils.js"></script>
 <script type="text/javascript" src="../lib/quark.base-1.0.0.js"></script>
 
-<script type="text/javascript" src="../xmodeler.engine.min.js"></script>
-<script type="text/javascript" src="../xmodeler.activity.min.js"></script>
+<script type="text/javascript" src="../src/base/GraphicsEx.js"></script> 
+<script type="text/javascript" src="../src/base/Element.js"></script> 
+<script type="text/javascript" src="../src/base/BoxObject.js"></script> 
+<script type="text/javascript" src="../src/base/FixSizeObject.js"></script>
+<script type="text/javascript" src="../src/base/AbstractActivity.js"></script>
+<script type="text/javascript" src="../src/base/AbstractTask.js"></script> 
+<script type="text/javascript" src="../src/base/AbstractEvent.js"></script> 
+<script type="text/javascript" src="../src/base/AbstractGateway.js"></script> 
+<script type="text/javascript" src="../src/base/AbstractConnection.js"></script> 
+<script type="text/javascript" src="../src/base/AbstractContainer.js"></script> 
+<script type="text/javascript" src="../src/base/ShadowFlow.js"></script> 
+<script type="text/javascript" src="../src/base/ShadowBox.js"></script> 
+<script type="text/javascript" src="../src/base/DockableObject.js"></script> 
+<script type="text/javascript" src="../src/base/ContextMenu.js"></script> 
+<script type="text/javascript" src="../src/base/Engine.js"></script> 
+
+<script type="text/javascript" src="../src/impl/activity/ActivityEngine.js"></script> 
+<script type="text/javascript" src="../src/impl/activity/SequenceFlow.js"></script> 
+<script type="text/javascript" src="../src/impl/activity/UserTask.js"></script> 
+<script type="text/javascript" src="../src/impl/activity/ServiceTask.js"></script> 
+<script type="text/javascript" src="../src/impl/activity/StartEvent.js"></script> 
+<script type="text/javascript" src="../src/impl/activity/EndEvent.js"></script> 
+<script type="text/javascript" src="../src/impl/activity/ParallelGateway.js"></script> 
+<script type="text/javascript" src="../src/impl/activity/ScriptTask.js"></script> 
+<script type="text/javascript" src="../src/impl/activity/ErrorEndEvent.js"></script> 
+<script type="text/javascript" src="../src/impl/activity/ExclusiveGateway.js"></script> 
+<script type="text/javascript" src="../src/impl/activity/SubProcess.js"></script> 
+<script type="text/javascript" src="../src/impl/activity/TimerEvent.js"></script> 
+<script type="text/javascript" src="../src/impl/activity/ActivityAdapter.js"></script> 
 
 <script type="text/javascript" src="../src/impl/locale/bpmn-lang-zh_CN.js"></script>
 <link rel="stylesheet" type="text/css" href="../themes/default/css/style.css">
